mapnik (3.0.6+ds-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Bas Couwenberg <sebastic@debian.org>  Sat, 10 Oct 2015 11:49:29 +0200

mapnik (3.0.5+ds-1) unstable; urgency=medium

  * New upstream release.
  * Add myself to Uploaders.
  * Drop libmapnik2-dev transitional package.

 -- Bas Couwenberg <sebastic@debian.org>  Sun, 20 Sep 2015 12:07:06 +0200

mapnik (3.0.4+ds-1) unstable; urgency=medium

  * Team upload.
  * New upstream release.

 -- Bas Couwenberg <sebastic@debian.org>  Sun, 30 Aug 2015 13:40:37 +0200

mapnik (3.0.3+ds-1) unstable; urgency=medium

  * Team upload.
  * New upstream release.
  * Update watch file repacksuffix and use common mangling options.
  * Update copyright file, sort & align copyright holders.
  * Refresh patches.
  * Tweak watch file to support v3.0.0-rc-offset.
  * Restructure control file with cme, change:
    - Update Vcs-Browser URL to use cgit instead of gitweb, and HTTPS.
  * Add upstream metadata.
  * Drop librasterlite dependency, input driver removed in 3.0.1 due to
    deprecation of librasterlite by its developer. See also:
    https://github.com/mapnik/mapnik/issues/2977
  * Rebuild for gdal transition.

 -- Bas Couwenberg <sebastic@debian.org>  Tue, 25 Aug 2015 20:34:51 +0200

mapnik (3.0.0+ds-2) unstable; urgency=medium

  * Team upload.

  [ Bas Couwenberg ]
  * Add gbp.conf to use pristine-tar by default.
  * Override dh_install to use --list-missing.
  * Include static libs in libmapnik-dev for python-mapnik and
    node-mapnik build.
  * Don't install nik2img by upstream request.
  * Exclude mips* from supported architectures.

  [ Jérémy Lal ]
  * Add a short explanation and a link to upstream explanation into
    README.Debian.

 -- Bas Couwenberg <sebastic@debian.org>  Thu, 16 Jul 2015 18:46:44 +0200

mapnik (3.0.0+ds-1) unstable; urgency=medium

  * Do not append CPPFLAGS to CUSTOM_DEFINES (Closes: #791482)
    Thanks to James Cowgill.
  * Imported Upstream version 3.0.0+ds