@@ -1,6 +1,7 @@
 mapnik (3.0.6+ds-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Re-enable parallel builds, problematic architectures no longer supported.
 
  -- Bas Couwenberg <sebastic@debian.org>  Sat, 10 Oct 2015 11:49:29 +0200
 
